Fix lesson tag alignment

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -382,6 +382,8 @@ footer {
   white-space: nowrap;
   margin-top: 2px;
   flex-shrink: 0;
+  width: 120px;
+  text-align: center;
 }
 
 .lesson-body h3 {
